--- a/default.html
+++ b/default.html
@@ -1,10 +1,7 @@
 <html>
-<title>
-Error
-</title>
-
+<title>Error Page</title>
 <body>
 <h2>404: Page not found</h2>
+<h3>This is a static page</h3>
 </body>
-
 </html>
