--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html>
-<title>Official website
-</title>
+<title>Official website</title>
 <body>
-<h1>Welcome to the website</h1>
-<br><br>
-<p>
-<button onclick="window.location.href = 'uploadfile.html';">Click Here</button>
-</p> 
+<h1>Welcome to the Home Page. This is VM1</h1>
 </body>
 </html>
 
