--- a/error.html
+++ b/error.html
@@ -1,7 +1,7 @@
 <html>
 <title>Error Page</title>
 <body>
-<h2>404: Page not found</h2>
+<h2>Application Gateway errors!</h2>
 <h3>This is a static page</h3>
 </body>
 </html>
